View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028852 | Community | OCCT:Application Framework | public | 2017-06-19 10:55 | 2017-09-29 16:28 |
Reporter | BenjaminBihler | Assigned To | bugmaster | ||
Priority | normal | Severity | text | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028852: TDF_AttributeIterator should not be marked as "handle with care" | ||||
Description | The header discourages from using TDF_AttributeIterator, but there seems to be no valid reason for that (see https://www.opencascade.com/content/should-tdfattributeiterator-be-handled-care). | ||||
Steps To Reproduce | Not required | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28852 has been created by BenjaminBihler. SHA-1: ff9a1b77702f22a2523e878de728cae597da5202 Detailed log of new commits: Author: Benjamin Bihler Date: Mon Jun 19 11:42:23 2017 +0200 0028852: TDF_AttributeIterator should not be marked as "handle with care" Warning lines have been removed. |
|
Branch CR28852 has been updated by mpv. SHA-1: 645f2a589e20a118c4aa398f7ec90512fd8cf47f Detailed log of new commits: Author: mpv Date: Tue Jun 20 12:14:14 2017 +0300 0028852: TDF_AttributeIterator should not be marked as "handle with care" Make "Value" method of the iterator return Handle (instead of pointer) to unify public interfaces (since this class now may be used as public). Simplified implementation of the iterator with Handle myValue field. Added comment about usage of this class. |
|
Dear szy, Could you review my extra fix for this issue. |
|
Dear mpv, I have created another issue for making the "Value" method of the iterator return handle instead of pointer, but unfortunately I have chosen the wrong category: it is issue 0028853. Benjamin |
|
-inline TDF_Attribute * TDF_AttributeIterator::Value() const +inline Handle(TDF_Attribute) TDF_AttributeIterator::Value() const { return myValue; } Why not "const Handle(TDF_Attribute)&"? |
|
Branch CR28852_2 has been created by mpv. SHA-1: 25a65a8ade9a45f286bdeb29c02623d3202f960c Detailed log of new commits: Author: mpv Date: Tue Jun 20 16:47:48 2017 +0300 0028852: TDF_AttributeIterator should not be marked as "handle with care" Warning lines have been removed. Added a comment about usage of this class. |
|
Please, use branch CR28852_2 for review. No tests are required, since it is only change in comments. |
|
Reviewed. |
|
Dear BugMaster, Please integrate branch CR28852_2 into the occt git-repository master. |
|
Branch CR28852 has been deleted by kgv. SHA-1: 645f2a589e20a118c4aa398f7ec90512fd8cf47f |
|
Branch CR28852_2 has been deleted by kgv. SHA-1: 25a65a8ade9a45f286bdeb29c02623d3202f960c |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-06-19 10:55 | BenjaminBihler | New Issue | |
2017-06-19 10:55 | BenjaminBihler | Assigned To | => BenjaminBihler |
2017-06-19 12:44 | git | Note Added: 0067512 | |
2017-06-19 12:44 | BenjaminBihler | Assigned To | BenjaminBihler => abv |
2017-06-19 12:44 | BenjaminBihler | Status | new => resolved |
2017-06-19 12:44 | BenjaminBihler | Steps to Reproduce Updated | |
2017-06-19 12:49 | kgv | Category | OCCT:Foundation Classes => OCCT:Application Framework |
2017-06-19 12:49 | kgv | Assigned To | abv => mpv |
2017-06-20 12:14 | git | Note Added: 0067532 | |
2017-06-20 12:15 | mpv | Assigned To | mpv => szy |
2017-06-20 12:15 | mpv | Note Added: 0067533 | |
2017-06-20 13:50 | BenjaminBihler | Note Added: 0067535 | |
2017-06-20 14:12 | kgv | Note Added: 0067537 | |
2017-06-20 16:48 | git | Note Added: 0067546 | |
2017-06-20 16:50 | mpv | Note Added: 0067548 | |
2017-06-22 10:07 | szy | Note Added: 0067579 | |
2017-06-22 10:07 | szy | Assigned To | szy => bugmaster |
2017-06-22 10:07 | szy | Status | resolved => reviewed |
2017-06-22 10:26 |
|
Test case number | => Not needed |
2017-06-22 10:26 |
|
Note Added: 0067581 | |
2017-06-22 10:26 |
|
Status | reviewed => tested |
2017-06-22 10:27 |
|
Note Edited: 0067581 | |
2017-06-23 12:25 | bugmaster | Changeset attached | => occt master c1a688e9 |
2017-06-23 12:25 | bugmaster | Status | tested => verified |
2017-06-23 12:25 | bugmaster | Resolution | open => fixed |
2017-07-03 08:45 | git | Note Added: 0067896 | |
2017-07-03 08:45 | git | Note Added: 0067897 | |
2017-09-29 16:18 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:28 |
|
Status | verified => closed |