0028852: TDF_AttributeIterator should not be marked as "handle with care"

Warning lines have been removed.
Added a comment about usage of this class.